2006-10-15  Thomas Schwinge  <tschwinge@gnu.org>

	[task #5956 --- ``Automake'ify GNU Mach's code base'']

	* configfrag.ac: New file.
	* tests/configfrag.ac: Likewise.
	* Makerules.am (DEFINES): Convert those into...
	* configfrag.ac: ... AC_DEFINE instantiations.
	* i386/Makerules.in (DEFINES): Convert those into...
	* i386/configfrag.ac: ... AC_DEFINE instantiations.
	* i386/Makerules.in: Remove file.
	* i386/configfrag.ac (AC_PREREQ, AC_INIT, AC_CONFIG_SRCDIR)
	(AC_CONFIG_SUBDIRS, AC_CONFIG_FILES, AC_OUTPUT): Don't invoke.
	(../version.m4): Don't include.
	(--disable-lpr): Rework configuration option.
	(--disable-default-device-drivers): Move configuration option to...
	* configfrag.ac: ... here.
	* configure.ac (AC_CONFIG_AUX_DIR, AM_INIT_AUTOMAKE): Instantiate.
	(AC_PREFIX_DEFAULT, AC_CONFIG_SUBDIRS): Don't invoke.
	<Output variable `systype'>: Rework the whole section.
	<Options> (--enable-kdb, --disable-kmsg): Move into `configfrag.ac' and
	adopt.
	<Programs> (AM_PROG_AS, AM_PROG_CC_C_O): Instantiate.
	(AC_CHECK_PROG): Move instantiation searching for a `mbchk' program
	into `tests/configfrag.ac'.
	(AC_CHECK_PROG): Instantiate to search for a `patch' program.
	<configure fragments> (tests/configfrag.ac, configfrag.ac)
	(linux/configfrag.ac): Include files.
	(i386/configfrag.ac): Include file if appropriate.
	(AC_CONFIG_HEADER): Instantiate for `config.h'.
	(AC_CONFIG_FILES): Remove `Makerules' and `doc/Makefile'.
	(AC_CONFIG_COMMANDS_POST): Instantiate for `config.status.dep.patch'.
	(AC_CONFIG_COMMANDS): Instantiate for
	`Makefile.correct_output_files_for_.S_files.patch' and (the
	nonexistent) `Makefile.dependency_tracking_for_.S_files.patch'.
	* Makefile.dependency_tracking_for_.S_files.patch: New file.
	* config.status.dep.patch: Likewise.
	* bogus/bootstrap_symbols.h: Remove file.
	* configfrag.ac: AC_DEFINE `BOOTSTRAP_SYMBOLS' to `0'.
	* bogus/cpus.h: Remove file.
	* configfrag.ac: AC_DEFINE `NCPUS' to `1'.  AH_TEMPLATE
	`MULTIPROCESSOR'.